--- a/trading/trading_oracle_nasdaq.Rmd
+++ b/trading/trading_oracle_nasdaq.Rmd
@@ -1,53 +1,24 @@
 ---
-author: "Ляпина Екатерина"
+author: "Р›СЏРїРёРЅР° Р•РєР°С‚РµСЂРёРЅР°"
 date: "Monday, March 30, 2015"
 output: html_document
 ---
 
-**Выполнила:**
-Ляпина Екатерина
+**Р’С‹РїРѕР»РЅРёР»Р°:**
+Р›СЏРїРёРЅР° Р•РєР°С‚РµСЂРёРЅР°
 
-Для создания собственной торговой стратегии, мною были выбраны акции компании ORACLE с биржи высокотехнологических компаний NASDAQ.
-Для анализа были взяты следующие данные. таймфрейм - 10 лет: 
+Р”Р»СЏ СЃРѕР·РґР°РЅРёСЏ СЃРѕР±СЃС‚РІРµРЅРЅРѕР№ С‚РѕСЂРіРѕРІРѕР№ СЃС‚СЂР°С‚РµРіРёРё, РјРЅРѕСЋ Р±С‹Р»Рё РІС‹Р±СЂР°РЅС‹ Р°РєС†РёРё РєРѕРјРїР°РЅРёРё ORACLE СЃ Р±РёСЂР¶Рё РІС‹СЃРѕРєРѕС‚РµС…РЅРѕР»РѕРіРёС‡РµСЃРєРёС… РєРѕРјРїР°РЅРёР№ NASDAQ.
+Р”Р»СЏ Р°РЅР°Р»РёР·Р° Р±С‹Р»Рё РІР·СЏС‚С‹ СЃР»РµРґСѓСЋС‰РёРµ РґР°РЅРЅС‹Рµ. С‚Р°Р№РјС„СЂРµР№Рј - 10 Р»РµС‚: 
 http://www.nasdaq.com/symbol/orcl/historical
 
-```{r,fig.align='center', echo=FALSE}
+```{r, fig.align='center', echo=FALSE}
 library(png)
 library(grid)
 img <- readPNG('nasdaq_small.png')
 grid.raster(img)
-opts_chunk$set(echo=FALSE, message=FALSE)
 ```
 
 
-**Объектом исследования** является финансовое состояние корпорации ORACLE, выраженное в биржевых котировках.
-
-**Предметом исследования** выступают  экономические показатели, формирующиеся в результате деятельности фирмы.
-
-**Цель работы:** 
-
-Установление структурных связей и закономерностей между элементами исследуемой системы в выбранной предметной области. Последующая интерпретация имеющихся данных, анализ применимости полученных результатов и создание наилучшей модели для дальнейшего прогнозирования подобных данных. В практическом смысле, аналитические модели могут успешно использоваться для решения задач выявления банкротства фирмы, и предупреждения подобных ситуаций.
-
-
-**Задачи:**
-
-Прохождение этапов извлечения, очистки и трансформации сырых данных.
-Анализ временных рядов в форме биржевых сводок. Применение техник для анализа временных рядов, анализ эффективности существующих торговых стратегий и создание своей собственной.
-
-
-#Описание данных:
-
-В нашем наборе данных `r nrow(Quotes_ORCL)` наблюдений и 6 переменных. Исходный файл с данными в формате csv.
-
-
-###Описание исходных переменных:
-
-- **date**: дата котировки, интервал записей - день, период - 10 лет.
-- **close** : цена на момент закрытия торгов.
-- **volume** : количество акций, которые обращались на бирже в день записи, оьъем торгов.
-- **open** : цена на момент открытия торгов.
-- **hight** : самая высокая цены за акцию за день.
-- **low** : самая низкая цены за акцию за день.
 
 ```{r, include=FALSE}
 Sys.setenv(LANG = "en")
@@ -57,57 +28,87 @@ library("zoo")
 library("TTR")
 
 
-#Считываем данные из файла, примедем их к виду, пригодному для анализа в R
+#РЎС‡РёС‚С‹РІР°РµРј РґР°РЅРЅС‹Рµ РёР· С„Р°Р№Р»Р°, РїСЂРёРјРµРґРµРј РёС… Рє РІРёРґСѓ, РїСЂРёРіРѕРґРЅРѕРјСѓ РґР»СЏ Р°РЅР°Р»РёР·Р° РІ R
 Quotes_ORCL <- read.csv(file="HistoricalQuotes.csv",stringsAsFactors = FALSE, header=TRUE, sep=",", dec= ".")
 Quotes_ORCL = Quotes_ORCL[-1,]
 rownames(Quotes_ORCL)<-NULL
 for (i in 2:6) Quotes_ORCL[,i]  <- as.numeric(as.character(Quotes_ORCL[,i]))
-#Инвертируем значения dataframe
+#РРЅРІРµСЂС‚РёСЂСѓРµРј Р·РЅР°С‡РµРЅРёСЏ dataframe
 for (i in 1:2519) Quotes_ORCL[i,]  <- Quotes_ORCL[2519 - i + 1,]
 Quotes_ORCL[,1]  <- as.Date(Quotes_ORCL[,1])
-opts_chunk$set(echo=FALSE, message=FALSE)
+opts_chunk$set(echo=FALSE, message=FALSE, fig.align = "center")
 ```
 
-Описательная статистика по нашей выбоке:
+
+**РћР±СЉРµРєС‚РѕРј РёСЃСЃР»РµРґРѕРІР°РЅРёСЏ** СЏРІР»СЏРµС‚СЃСЏ С„РёРЅР°РЅСЃРѕРІРѕРµ СЃРѕСЃС‚РѕСЏРЅРёРµ РєРѕСЂРїРѕСЂР°С†РёРё ORACLE, РІС‹СЂР°Р¶РµРЅРЅРѕРµ РІ Р±РёСЂР¶РµРІС‹С… РєРѕС‚РёСЂРѕРІРєР°С….
+
+**РџСЂРµРґРјРµС‚РѕРј РёСЃСЃР»РµРґРѕРІР°РЅРёСЏ** РІС‹СЃС‚СѓРїР°СЋС‚  СЌРєРѕРЅРѕРјРёС‡РµСЃРєРёРµ РїРѕРєР°Р·Р°С‚РµР»Рё, С„РѕСЂРјРёСЂСѓСЋС‰РёРµСЃСЏ РІ СЂРµР·СѓР»СЊС‚Р°С‚Рµ РґРµСЏС‚РµР»СЊРЅРѕСЃС‚Рё С„РёСЂРјС‹.
+
+**Р¦РµР»СЊ СЂР°Р±РѕС‚С‹:** 
+
+РЈСЃС‚Р°РЅРѕРІР»РµРЅРёРµ СЃС‚СЂСѓРєС‚СѓСЂРЅС‹С… СЃРІСЏР·РµР№ Рё Р·Р°РєРѕРЅРѕРјРµСЂРЅРѕСЃС‚РµР№ РјРµР¶РґСѓ СЌР»РµРјРµРЅС‚Р°РјРё РёСЃСЃР»РµРґСѓРµРјРѕР№ СЃРёСЃС‚РµРјС‹ РІ РІС‹Р±СЂР°РЅРЅРѕР№ РїСЂРµРґРјРµС‚РЅРѕР№ РѕР±Р»Р°СЃС‚Рё. РџРѕСЃР»РµРґСѓСЋС‰Р°СЏ РёРЅС‚РµСЂРїСЂРµС‚Р°С†РёСЏ РёРјРµСЋС‰РёС…СЃСЏ РґР°РЅРЅС‹С…, Р°РЅР°Р»РёР· РїСЂРёРјРµРЅРёРјРѕСЃС‚Рё РїРѕР»СѓС‡РµРЅРЅС‹С… СЂРµР·СѓР»СЊС‚Р°С‚РѕРІ Рё СЃРѕР·РґР°РЅРёРµ РЅР°РёР»СѓС‡С€РµР№ РјРѕРґРµР»Рё РґР»СЏ РґР°Р»СЊРЅРµР№С€РµРіРѕ РїСЂРѕРіРЅРѕР·РёСЂРѕРІР°РЅРёСЏ РїРѕРґРѕР±РЅС‹С… РґР°РЅРЅС‹С…. Р’ РїСЂР°РєС‚РёС‡РµСЃРєРѕРј СЃРјС‹СЃР»Рµ, Р°РЅР°Р»РёС‚РёС‡РµСЃРєРёРµ РјРѕРґРµР»Рё РјРѕРіСѓС‚ СѓСЃРїРµС€РЅРѕ РёСЃРїРѕР»СЊР·РѕРІР°С‚СЊСЃСЏ РґР»СЏ СЂРµС€РµРЅРёСЏ Р·Р°РґР°С‡ РІС‹СЏРІР»РµРЅРёСЏ Р±Р°РЅРєСЂРѕС‚СЃС‚РІР° С„РёСЂРјС‹, Рё РїСЂРµРґСѓРїСЂРµР¶РґРµРЅРёСЏ РїРѕРґРѕР±РЅС‹С… СЃРёС‚СѓР°С†РёР№.
+
+
+**Р—Р°РґР°С‡Рё:**
+
+РџСЂРѕС…РѕР¶РґРµРЅРёРµ СЌС‚Р°РїРѕРІ РёР·РІР»РµС‡РµРЅРёСЏ, РѕС‡РёСЃС‚РєРё Рё С‚СЂР°РЅСЃС„РѕСЂРјР°С†РёРё СЃС‹СЂС‹С… РґР°РЅРЅС‹С….
+РђРЅР°Р»РёР· РІСЂРµРјРµРЅРЅС‹С… СЂСЏРґРѕРІ РІ С„РѕСЂРјРµ Р±РёСЂР¶РµРІС‹С… СЃРІРѕРґРѕРє. РџСЂРёРјРµРЅРµРЅРёРµ С‚РµС…РЅРёРє РґР»СЏ Р°РЅР°Р»РёР·Р° РІСЂРµРјРµРЅРЅС‹С… СЂСЏРґРѕРІ, Р°РЅР°Р»РёР· СЌС„С„РµРєС‚РёРІРЅРѕСЃС‚Рё СЃСѓС‰РµСЃС‚РІСѓСЋС‰РёС… С‚РѕСЂРіРѕРІС‹С… СЃС‚СЂР°С‚РµРіРёР№ Рё СЃРѕР·РґР°РЅРёРµ СЃРІРѕРµР№ СЃРѕР±СЃС‚РІРµРЅРЅРѕР№.
+
+
+#РћРїРёСЃР°РЅРёРµ РґР°РЅРЅС‹С…:
+
+Р’ РЅР°С€РµРј РЅР°Р±РѕСЂРµ РґР°РЅРЅС‹С… `r nrow(Quotes_ORCL)` РЅР°Р±Р»СЋРґРµРЅРёР№ Рё 6 РїРµСЂРµРјРµРЅРЅС‹С…. РСЃС…РѕРґРЅС‹Р№ С„Р°Р№Р» СЃ РґР°РЅРЅС‹РјРё РІ С„РѕСЂРјР°С‚Рµ csv.
+
+
+###РћРїРёСЃР°РЅРёРµ РёСЃС…РѕРґРЅС‹С… РїРµСЂРµРјРµРЅРЅС‹С…:
+
+- **date**: РґР°С‚Р° РєРѕС‚РёСЂРѕРІРєРё, РёРЅС‚РµСЂРІР°Р» Р·Р°РїРёСЃРµР№ - РґРµРЅСЊ, РїРµСЂРёРѕРґ - 10 Р»РµС‚.
+- **close** : С†РµРЅР° РЅР° РјРѕРјРµРЅС‚ Р·Р°РєСЂС‹С‚РёСЏ С‚РѕСЂРіРѕРІ.
+- **volume** : РєРѕР»РёС‡РµСЃС‚РІРѕ Р°РєС†РёР№, РєРѕС‚РѕСЂС‹Рµ РѕР±СЂР°С‰Р°Р»РёСЃСЊ РЅР° Р±РёСЂР¶Рµ РІ РґРµРЅСЊ Р·Р°РїРёСЃРё, РѕСЊСЉРµРј С‚РѕСЂРіРѕРІ.
+- **open** : С†РµРЅР° РЅР° РјРѕРјРµРЅС‚ РѕС‚РєСЂС‹С‚РёСЏ С‚РѕСЂРіРѕРІ.
+- **hight** : СЃР°РјР°СЏ РІС‹СЃРѕРєР°СЏ С†РµРЅС‹ Р·Р° Р°РєС†РёСЋ Р·Р° РґРµРЅСЊ.
+- **low** : СЃР°РјР°СЏ РЅРёР·РєР°СЏ С†РµРЅС‹ Р·Р° Р°РєС†РёСЋ Р·Р° РґРµРЅСЊ.
+
+РћРїРёСЃР°С‚РµР»СЊРЅР°СЏ СЃС‚Р°С‚РёСЃС‚РёРєР° РїРѕ РЅР°С€РµР№ РІС‹Р±РѕРєРµ:
 ```{r, results='asis'}
 knitr::kable(summary(Quotes_ORCL))
 ```
 
-Линейный график зависимости цены закрытия для 300 наблюдений (период с 2005-03-28 по 2006-06-02):
+Р›РёРЅРµР№РЅС‹Р№ РіСЂР°С„РёРє Р·Р°РІРёСЃРёРјРѕСЃС‚Рё С†РµРЅС‹ Р·Р°РєСЂС‹С‚РёСЏ РґР»СЏ 300 РЅР°Р±Р»СЋРґРµРЅРёР№ (РїРµСЂРёРѕРґ СЃ 2005-03-28 РїРѕ 2006-06-02):
 
 ```{r}
-plot(Quotes_ORCL[1:300,2], type="l", lwd=2, col="red", xlab="Наблюдения", ylab="Цена закрытия", main="Акции компании ORACLE", ylim=c(10,16) )
+plot(Quotes_ORCL[1:300,2], type="l", lwd=2, col="red", xlab="РќР°Р±Р»СЋРґРµРЅРёСЏ", ylab="Р¦РµРЅР° Р·Р°РєСЂС‹С‚РёСЏ", main="РђРєС†РёРё РєРѕРјРїР°РЅРёРё ORACLE", ylim=c(10,16) )
 ```
 
 ```{r, include=FALSE}
-#Переведем в удобоваримый вид для наших пакетов
+#РџРµСЂРµРІРµРґРµРј РІ СѓРґРѕР±РѕРІР°СЂРёРјС‹Р№ РІРёРґ РґР»СЏ РЅР°С€РёС… РїР°РєРµС‚РѕРІ
 ORCL <- xts(Quotes_ORCL[, 2:6], order.by=as.POSIXct(Quotes_ORCL[,1]))
 ORCL <- ORCL[ ! duplicated( index(ORCL) ),]
 ```
 
 
-Линейный график зависимости объема торгов для 300 наблюдений (период с 2005-03-28 по 2006-06-02):
+Р›РёРЅРµР№РЅС‹Р№ РіСЂР°С„РёРє Р·Р°РІРёСЃРёРјРѕСЃС‚Рё РѕР±СЉРµРјР° С‚РѕСЂРіРѕРІ РґР»СЏ 300 РЅР°Р±Р»СЋРґРµРЅРёР№ (РїРµСЂРёРѕРґ СЃ 2005-03-28 РїРѕ 2006-06-02):
 
 ```{r}
-plot(Quotes_ORCL[1:300,3], type="l", lwd=2, col="blue", xlab="Наблюдения", ylab="Объем торгов", main="Акции компании ORACLE", ylim=c(0,203555500) )
+plot(Quotes_ORCL[1:300,3], type="l", lwd=2, col="blue", xlab="РќР°Р±Р»СЋРґРµРЅРёСЏ", ylab="РћР±СЉРµРј С‚РѕСЂРіРѕРІ", main="РђРєС†РёРё РєРѕРјРїР°РЅРёРё ORACLE", ylim=c(0,203555500) )
 ```
 
 
-График цены в форме японских свечей (где зеленым цветом отображено, когда цена закрытия выше цены открытия, красным - наоборот):
+Р“СЂР°С„РёРє С†РµРЅС‹ РІ С„РѕСЂРјРµ СЏРїРѕРЅСЃРєРёС… СЃРІРµС‡РµР№ (РіРґРµ Р·РµР»РµРЅС‹Рј С†РІРµС‚РѕРј РѕС‚РѕР±СЂР°Р¶РµРЅРѕ, РєРѕРіРґР° С†РµРЅР° Р·Р°РєСЂС‹С‚РёСЏ РІС‹С€Рµ С†РµРЅС‹ РѕС‚РєСЂС‹С‚РёСЏ, РєСЂР°СЃРЅС‹Рј - РЅР°РѕР±РѕСЂРѕС‚):
 
 ```{r}
 chartSeries(ORCL,subset='2005-03-28::2005-10-26')
 ```
 
 
-Столбиковый график:
+РЎС‚РѕР»Р±РёРєРѕРІС‹Р№ РіСЂР°С„РёРє:
 
 ```{r}
 barChart(ORCL,subset='2005-03-28::2005-10-26', theme='white.mono',bar.type='hlc')
 ```
 
 
-Скользящее среднее на основании цены закрытия, окно усреднения - 10 отсчетов:
+РЎРєРѕР»СЊР·СЏС‰РµРµ СЃСЂРµРґРЅРµРµ РЅР° РѕСЃРЅРѕРІР°РЅРёРё С†РµРЅС‹ Р·Р°РєСЂС‹С‚РёСЏ, РѕРєРЅРѕ СѓСЃСЂРµРґРЅРµРЅРёСЏ - 10 РѕС‚СЃС‡РµС‚РѕРІ:
 
 ```{r}
 chartSeries(ORCL, subset='2005-03-28::2005-10-26',TA="addSMA(10)")
@@ -115,49 +116,49 @@ chartSeries(ORCL, subset='2005-03-28::2005-10-26',TA="addSMA(10)")
 
 
 
-Скользящее среднее на основании цены закрытия, окно усреднения - 50 отсчетов:
+РЎРєРѕР»СЊР·СЏС‰РµРµ СЃСЂРµРґРЅРµРµ РЅР° РѕСЃРЅРѕРІР°РЅРёРё С†РµРЅС‹ Р·Р°РєСЂС‹С‚РёСЏ, РѕРєРЅРѕ СѓСЃСЂРµРґРЅРµРЅРёСЏ - 50 РѕС‚СЃС‡РµС‚РѕРІ:
 
 ```{r}
 chartSeries(ORCL, subset='2005-03-28::2005-10-26',TA="addSMA(50)")
 ```
 
 
-График сопоставления скользящих средних между собой:
+Р“СЂР°С„РёРє СЃРѕРїРѕСЃС‚Р°РІР»РµРЅРёСЏ СЃРєРѕР»СЊР·СЏС‰РёС… СЃСЂРµРґРЅРёС… РјРµР¶РґСѓ СЃРѕР±РѕР№:
 
 ```{r}
 for (i in 10:2519) Quotes_ORCL[i,7] <- mean(Quotes_ORCL[(i-9):i,2])
-plot(Quotes_ORCL[1:300,2], type="l", lwd=2, col="red", xlab="Наблюдения", ylab="Цена закрытия", main="Акции компании ORACLE", ylim=c(10,16) )
-lines(Quotes_ORCL[1:300,7], type="l", lwd=2, col="blue", xlab="Наблюдения", ylab="Цена закрытия", main="Акции компании ORACLE" )
+plot(Quotes_ORCL[1:300,2], type="l", lwd=2, col="red", xlab="РќР°Р±Р»СЋРґРµРЅРёСЏ", ylab="Р¦РµРЅР° Р·Р°РєСЂС‹С‚РёСЏ", main="РђРєС†РёРё РєРѕРјРїР°РЅРёРё ORACLE", ylim=c(10,16) )
+lines(Quotes_ORCL[1:300,7], type="l", lwd=2, col="blue", xlab="РќР°Р±Р»СЋРґРµРЅРёСЏ", ylab="Р¦РµРЅР° Р·Р°РєСЂС‹С‚РёСЏ", main="РђРєС†РёРё РєРѕРјРїР°РЅРёРё ORACLE" )
 colnames(Quotes_ORCL)[7] <- "SMAS"
 
 
 for (i in 50:2519) Quotes_ORCL[i,8] <- mean(Quotes_ORCL[(i-49):i,2])
-lines(Quotes_ORCL[1:300,8], type="l", lwd=2, col="orange", xlab="Наблюдения", ylab="Цена закрытия", main="Акции компании ORACLE" )
+lines(Quotes_ORCL[1:300,8], type="l", lwd=2, col="orange", xlab="РќР°Р±Р»СЋРґРµРЅРёСЏ", ylab="Р¦РµРЅР° Р·Р°РєСЂС‹С‚РёСЏ", main="РђРєС†РёРё РєРѕРјРїР°РЅРёРё ORACLE" )
 colnames(Quotes_ORCL)[8] <- "SMAL"
 ```
 
 
-График сопоставления экспоненциальных скользящих средних между собой:
+Р“СЂР°С„РёРє СЃРѕРїРѕСЃС‚Р°РІР»РµРЅРёСЏ СЌРєСЃРїРѕРЅРµРЅС†РёР°Р»СЊРЅС‹С… СЃРєРѕР»СЊР·СЏС‰РёС… СЃСЂРµРґРЅРёС… РјРµР¶РґСѓ СЃРѕР±РѕР№:
 
 ```{r}
-#График сопоставления экспоненциальных скользящих средних между собой:
+#Р“СЂР°С„РёРє СЃРѕРїРѕСЃС‚Р°РІР»РµРЅРёСЏ СЌРєСЃРїРѕРЅРµРЅС†РёР°Р»СЊРЅС‹С… СЃРєРѕР»СЊР·СЏС‰РёС… СЃСЂРµРґРЅРёС… РјРµР¶РґСѓ СЃРѕР±РѕР№:
 Quotes_ORCL[,9] <- EMA(Quotes_ORCL[,2], n=10, ratio = (10+1)/(10-1))
-plot(Quotes_ORCL[1:300,2], type="l", lwd=2, col="red", xlab="Наблюдения", ylab="Цена закрытия", main="Акции компании ORACLE", ylim=c(10,16) )
-lines(Quotes_ORCL[1:300,9], type="l", lwd=2, col="blue", xlab="Наблюдения", ylab="Цена закрытия", main="Акции компании ORACLE" )
+plot(Quotes_ORCL[1:300,2], type="l", lwd=2, col="red", xlab="РќР°Р±Р»СЋРґРµРЅРёСЏ", ylab="Р¦РµРЅР° Р·Р°РєСЂС‹С‚РёСЏ", main="РђРєС†РёРё РєРѕРјРїР°РЅРёРё ORACLE", ylim=c(10,16) )
+lines(Quotes_ORCL[1:300,9], type="l", lwd=2, col="blue", xlab="РќР°Р±Р»СЋРґРµРЅРёСЏ", ylab="Р¦РµРЅР° Р·Р°РєСЂС‹С‚РёСЏ", main="РђРєС†РёРё РєРѕРјРїР°РЅРёРё ORACLE" )
 colnames(Quotes_ORCL)[9] <- "EMAS"
 
 Quotes_ORCL[,10] <- EMA(Quotes_ORCL[,2], n=50, ratio = (50+1)/(50-1))
-lines(Quotes_ORCL[1:300,10], type="l", lwd=2, col="orange", xlab="Наблюдения", ylab="Цена закрытия", main="Акции компании ORACLE" )
+lines(Quotes_ORCL[1:300,10], type="l", lwd=2, col="orange", xlab="РќР°Р±Р»СЋРґРµРЅРёСЏ", ylab="Р¦РµРЅР° Р·Р°РєСЂС‹С‚РёСЏ", main="РђРєС†РёРё РєРѕРјРїР°РЅРёРё ORACLE" )
 colnames(Quotes_ORCL)[10] <- "EMAL"
 
-#График сопоставления экспоненциальных скользящих средних между собой:
+#Р“СЂР°С„РёРє СЃРѕРїРѕСЃС‚Р°РІР»РµРЅРёСЏ СЌРєСЃРїРѕРЅРµРЅС†РёР°Р»СЊРЅС‹С… СЃРєРѕР»СЊР·СЏС‰РёС… СЃСЂРµРґРЅРёС… РјРµР¶РґСѓ СЃРѕР±РѕР№:
 Quotes_ORCL[,9] <- EMA(Quotes_ORCL[,2], n=10, ratio = (10+1)/(10-1))
-plot(Quotes_ORCL[1:300,2], type="l", lwd=2, col="red", xlab="Наблюдения", ylab="Цена закрытия", main="Акции компании ORACLE", ylim=c(10,16) )
-lines(Quotes_ORCL[1:300,9], type="l", lwd=2, col="blue", xlab="Наблюдения", ylab="Цена закрытия", main="Акции компании ORACLE" )
+plot(Quotes_ORCL[1:300,2], type="l", lwd=2, col="red", xlab="РќР°Р±Р»СЋРґРµРЅРёСЏ", ylab="Р¦РµРЅР° Р·Р°РєСЂС‹С‚РёСЏ", main="РђРєС†РёРё РєРѕРјРїР°РЅРёРё ORACLE", ylim=c(10,16) )
+lines(Quotes_ORCL[1:300,9], type="l", lwd=2, col="blue", xlab="РќР°Р±Р»СЋРґРµРЅРёСЏ", ylab="Р¦РµРЅР° Р·Р°РєСЂС‹С‚РёСЏ", main="РђРєС†РёРё РєРѕРјРїР°РЅРёРё ORACLE" )
 colnames(Quotes_ORCL)[9] <- "EMAS"
 
 Quotes_ORCL[,10] <- EMA(Quotes_ORCL[,2], n=50, ratio = (50+1)/(50-1))
-lines(Quotes_ORCL[1:300,10], type="l", lwd=2, col="orange", xlab="Наблюдения", ylab="Цена закрытия", main="Акции компании ORACLE" )
+lines(Quotes_ORCL[1:300,10], type="l", lwd=2, col="orange", xlab="РќР°Р±Р»СЋРґРµРЅРёСЏ", ylab="Р¦РµРЅР° Р·Р°РєСЂС‹С‚РёСЏ", main="РђРєС†РёРё РєРѕРјРїР°РЅРёРё ORACLE" )
 colnames(Quotes_ORCL)[10] <- "EMAL"
 
 WMA <- function(L, data){
@@ -189,26 +190,27 @@ Quotes_ORCL[,12] <- WMA(50, Quotes_ORCL[, 2])
 
 
 
-Графики для короткого окна усреднения. для наглядности мы возьмем первые 100 наблюдений:
+Р“СЂР°С„РёРєРё РґР»СЏ РєРѕСЂРѕС‚РєРѕРіРѕ РѕРєРЅР° СѓСЃСЂРµРґРЅРµРЅРёСЏ. РґР»СЏ РЅР°РіР»СЏРґРЅРѕСЃС‚Рё РјС‹ РІРѕР·СЊРјРµРј РїРµСЂРІС‹Рµ 100 РЅР°Р±Р»СЋРґРµРЅРёР№:
 
 ```{r}
-#Графики для короткого окна усреднения:
-plot(Quotes_ORCL[1:100,2], type="l", lwd=2, col="black", xlab="Наблюдения", ylab="Цена закрытия", main="Акции компании ORACLE", ylim=c(10,16) )
-lines(Quotes_ORCL[1:100,7], type="l", lwd=2, col="red", xlab="Наблюдения", ylab="Цена закрытия", main="Акции компании ORACLE" )
-lines(Quotes_ORCL[1:100,9], type="l", lwd=2, col="orange", xlab="Наблюдения", ylab="Цена закрытия", main="Акции компании ORACLE" )
-lines(Quotes_ORCL[1:100,11], type="l", lwd=2, col="blue", xlab="Наблюдения", ylab="Цена закрытия", main="Акции компании ORACLE" )
+#Р“СЂР°С„РёРєРё РґР»СЏ РєРѕСЂРѕС‚РєРѕРіРѕ РѕРєРЅР° СѓСЃСЂРµРґРЅРµРЅРёСЏ:
+plot(Quotes_ORCL[1:100,2], type="l", lwd=2, col="black", xlab="РќР°Р±Р»СЋРґРµРЅРёСЏ", ylab="Р¦РµРЅР° Р·Р°РєСЂС‹С‚РёСЏ", main="РђРєС†РёРё РєРѕРјРїР°РЅРёРё ORACLE", ylim=c(10,16) )
+lines(Quotes_ORCL[1:100,7], type="l", lwd=2, col="red", xlab="РќР°Р±Р»СЋРґРµРЅРёСЏ", ylab="Р¦РµРЅР° Р·Р°РєСЂС‹С‚РёСЏ", main="РђРєС†РёРё РєРѕРјРїР°РЅРёРё ORACLE" )
+lines(Quotes_ORCL[1:100,9], type="l", lwd=2, col="orange", xlab="РќР°Р±Р»СЋРґРµРЅРёСЏ", ylab="Р¦РµРЅР° Р·Р°РєСЂС‹С‚РёСЏ", main="РђРєС†РёРё РєРѕРјРїР°РЅРёРё ORACLE" )
+lines(Quotes_ORCL[1:100,11], type="l", lwd=2, col="blue", xlab="РќР°Р±Р»СЋРґРµРЅРёСЏ", ylab="Р¦РµРЅР° Р·Р°РєСЂС‹С‚РёСЏ", main="РђРєС†РёРё РєРѕРјРїР°РЅРёРё ORACLE" )
 legend("topleft", c("SMA-S", "EMA-S", "WMA-S"), col=c("red", "orange", "blue"), lwd=4)
 ```
 
 
-Графики для длинного окна усреднения. для наглядности мы возьмем первые 100 наблюдений:
+Р“СЂР°С„РёРєРё РґР»СЏ РґР»РёРЅРЅРѕРіРѕ РѕРєРЅР° СѓСЃСЂРµРґРЅРµРЅРёСЏ. РґР»СЏ РЅР°РіР»СЏРґРЅРѕСЃС‚Рё РјС‹ РІРѕР·СЊРјРµРј РїРµСЂРІС‹Рµ 100 РЅР°Р±Р»СЋРґРµРЅРёР№:
 
 ```{r}
-#Графики для длинного окна усреднения:
-plot(Quotes_ORCL[1:100,2], type="l", lwd=2, col="black", xlab="Наблюдения", ylab="Цена закрытия", main="Акции компании ORACLE", ylim=c(10,16) )
-lines(Quotes_ORCL[1:100,8], type="l", lwd=2, col="red", xlab="Наблюдения", ylab="Цена закрытия", main="Акции компании ORACLE" )
-lines(Quotes_ORCL[1:100,10], type="l", lwd=2, col="orange", xlab="Наблюдения", ylab="Цена закрытия", main="Акции компании ORACLE" )
-lines(Quotes_ORCL[1:100,12], type="l", lwd=2, col="blue", xlab="Наблюдения", ylab="Цена закрытия", main="Акции компании ORACLE" )
+#Р“СЂР°С„РёРєРё РґР»СЏ РґР»РёРЅРЅРѕРіРѕ РѕРєРЅР° СѓСЃСЂРµРґРЅРµРЅРёСЏ:
+plot(Quotes_ORCL[1:100,2], type="l", lwd=2, col="black", xlab="РќР°Р±Р»СЋРґРµРЅРёСЏ", ylab="Р¦РµРЅР° Р·Р°РєСЂС‹С‚РёСЏ", main="РђРєС†РёРё РєРѕРјРїР°РЅРёРё ORACLE", ylim=c(10,16) )
+par(op)
+lines(Quotes_ORCL[1:100,8], type="l", lwd=2, col="red", xlab="РќР°Р±Р»СЋРґРµРЅРёСЏ", ylab="Р¦РµРЅР° Р·Р°РєСЂС‹С‚РёСЏ", main="РђРєС†РёРё РєРѕРјРїР°РЅРёРё ORACLE" )
+lines(Quotes_ORCL[1:100,10], type="l", lwd=2, col="orange", xlab="РќР°Р±Р»СЋРґРµРЅРёСЏ", ylab="Р¦РµРЅР° Р·Р°РєСЂС‹С‚РёСЏ", main="РђРєС†РёРё РєРѕРјРїР°РЅРёРё ORACLE" )
+lines(Quotes_ORCL[1:100,12], type="l", lwd=2, col="blue", xlab="РќР°Р±Р»СЋРґРµРЅРёСЏ", ylab="Р¦РµРЅР° Р·Р°РєСЂС‹С‚РёСЏ", main="РђРєС†РёРё РєРѕРјРїР°РЅРёРё ORACLE" )
 legend("topleft", c("SMA-L", "EMA-L", "WMA-L"), col=c("red", "orange", "blue"), lwd=4)
 
 ```
