--- a/trading/trading_oracle_nasdaq.Rmd
+++ b/trading/trading_oracle_nasdaq.Rmd
@@ -1,7 +1,6 @@
 ---
 author: "Ляпина Екатерина"
 date: "Monday, March 30, 2015"
-output: html_document
 ---
 
 **Выполнила:**
@@ -28,14 +27,18 @@ library("zoo")
 library("TTR")
 
 
-#Считываем данные из файла, примедем их к виду, пригодному для анализа в R
-Quotes_ORCL <- read.csv(file="HistoricalQuotes.csv",stringsAsFactors = FALSE, header=TRUE, sep=",", dec= ".")
+#Считываем данные из файла, примедем их к виду, пригодному для анализа в R:
+Quotes_ORCL1 <- read.csv(file="HistoricalQuotes.csv",stringsAsFactors = FALSE, header=TRUE, sep=",", dec= ".")
+for (i in 2:6) Quotes_ORCL1[,i]  <- as.numeric(as.character(Quotes_ORCL1[,i]))
+#Инвертируем значения:
+Quotes_ORCL <- subset(Quotes_ORCL1, select = c("date", "close", "volume",  "open", "high",  "low")); 
+
+for (i in 1:2519) Quotes_ORCL[i,]  <- Quotes_ORCL1[2519 - i + 1,]
+Quotes_ORCL[,1]  <- as.Date(Quotes_ORCL[,1])
 Quotes_ORCL = Quotes_ORCL[-1,]
 rownames(Quotes_ORCL)<-NULL
-for (i in 2:6) Quotes_ORCL[,i]  <- as.numeric(as.character(Quotes_ORCL[,i]))
-#Инвертируем значения dataframe
-for (i in 1:2519) Quotes_ORCL[i,]  <- Quotes_ORCL[2519 - i + 1,]
-Quotes_ORCL[,1]  <- as.Date(Quotes_ORCL[,1])
+rm(Quotes_ORCL1)
+
 opts_chunk$set(echo=FALSE, message=FALSE, fig.align = "center")
 ```
 
@@ -126,15 +129,15 @@ chartSeries(ORCL, subset='2005-03-28::2005-10-26',TA="addSMA(50)")
 График сопоставления скользящих средних между собой:
 
 ```{r}
+#График сопоставления скользящих средних между собой:
 for (i in 10:2519) Quotes_ORCL[i,7] <- mean(Quotes_ORCL[(i-9):i,2])
 plot(Quotes_ORCL[1:300,2], type="l", lwd=2, col="red", xlab="Наблюдения", ylab="Цена закрытия", main="Акции компании ORACLE", ylim=c(10,16) )
 lines(Quotes_ORCL[1:300,7], type="l", lwd=2, col="blue", xlab="Наблюдения", ylab="Цена закрытия", main="Акции компании ORACLE" )
 colnames(Quotes_ORCL)[7] <- "SMAS"
-
-
 for (i in 50:2519) Quotes_ORCL[i,8] <- mean(Quotes_ORCL[(i-49):i,2])
 lines(Quotes_ORCL[1:300,8], type="l", lwd=2, col="orange", xlab="Наблюдения", ylab="Цена закрытия", main="Акции компании ORACLE" )
 colnames(Quotes_ORCL)[8] <- "SMAL"
+legend("topleft", c("SMA-S", "SMA-L"), col=c("blue", "orange"), lwd=4)
 ```
 
 
@@ -142,25 +145,17 @@ colnames(Quotes_ORCL)[8] <- "SMAL"
 
 ```{r}
 #График сопоставления экспоненциальных скользящих средних между собой:
-Quotes_ORCL[,9] <- EMA(Quotes_ORCL[,2], n=10, ratio = (10+1)/(10-1))
+Quotes_ORCL[,9] <- EMA(Quotes_ORCL[,2], n=10, ratio = 1-((10-1)/(10+1)))
 plot(Quotes_ORCL[1:300,2], type="l", lwd=2, col="red", xlab="Наблюдения", ylab="Цена закрытия", main="Акции компании ORACLE", ylim=c(10,16) )
 lines(Quotes_ORCL[1:300,9], type="l", lwd=2, col="blue", xlab="Наблюдения", ylab="Цена закрытия", main="Акции компании ORACLE" )
 colnames(Quotes_ORCL)[9] <- "EMAS"
-
-Quotes_ORCL[,10] <- EMA(Quotes_ORCL[,2], n=50, ratio = (50+1)/(50-1))
+Quotes_ORCL[,10] <- EMA(Quotes_ORCL[,2], n=50, ratio = 1 - ((50-1)/(50+1)))
 lines(Quotes_ORCL[1:300,10], type="l", lwd=2, col="orange", xlab="Наблюдения", ylab="Цена закрытия", main="Акции компании ORACLE" )
 colnames(Quotes_ORCL)[10] <- "EMAL"
+legend("topleft", c("EMA-S", "EMA-L"), col=c("blue", "orange"), lwd=4)
+```
 
-#График сопоставления экспоненциальных скользящих средних между собой:
-Quotes_ORCL[,9] <- EMA(Quotes_ORCL[,2], n=10, ratio = (10+1)/(10-1))
-plot(Quotes_ORCL[1:300,2], type="l", lwd=2, col="red", xlab="Наблюдения", ylab="Цена закрытия", main="Акции компании ORACLE", ylim=c(10,16) )
-lines(Quotes_ORCL[1:300,9], type="l", lwd=2, col="blue", xlab="Наблюдения", ylab="Цена закрытия", main="Акции компании ORACLE" )
-colnames(Quotes_ORCL)[9] <- "EMAS"
-
-Quotes_ORCL[,10] <- EMA(Quotes_ORCL[,2], n=50, ratio = (50+1)/(50-1))
-lines(Quotes_ORCL[1:300,10], type="l", lwd=2, col="orange", xlab="Наблюдения", ylab="Цена закрытия", main="Акции компании ORACLE" )
-colnames(Quotes_ORCL)[10] <- "EMAL"
-
+```{r, include=FALSE}
 WMA <- function(L, data){
   wma_w <- function(L,n)
   {
@@ -187,10 +182,21 @@ Quotes_ORCL[,12] <- WMA(50, Quotes_ORCL[, 2])
 ```
 
 
+График сопоставления окон усреднения:
+
+```{r}
+#График сопоставления различных окон между собой:
+plot(Quotes_ORCL[1:300,2], type="l", lwd=2, col="red", xlab="Наблюдения", ylab="Цена закрытия", main="Акции компании ORACLE", ylim=c(10,16) )
+lines(Quotes_ORCL[1:300,11], type="l", lwd=2, col="blue", xlab="Наблюдения", ylab="Цена закрытия", main="Акции компании ORACLE" )
+colnames(Quotes_ORCL)[11] <- "WMAS"
+lines(Quotes_ORCL[1:300,12], type="l", lwd=2, col="orange", xlab="Наблюдения", ylab="Цена закрытия", main="Акции компании ORACLE" )
+colnames(Quotes_ORCL)[12] <- "WMAL"
+legend("topleft", c("WMA-S", "WMA-L"), col=c("blue", "orange"), lwd=4)
+```
 
 
 
-Графики для короткого окна усреднения. для наглядности мы возьмем первые 100 наблюдений:
+Графики для сопоставления короткого окна усреднения, для наглядности мы возьмем первые 100 наблюдений:
 
 ```{r}
 #Графики для короткого окна усреднения:
@@ -201,19 +207,105 @@ lines(Quotes_ORCL[1:100,11], type="l", lwd=2, col="blue", xlab="Наблюден
 legend("topleft", c("SMA-S", "EMA-S", "WMA-S"), col=c("red", "orange", "blue"), lwd=4)
 ```
 
-
-Графики для длинного окна усреднения. для наглядности мы возьмем первые 100 наблюдений:
+Графики для длинного окна усреднения, для наглядности мы возьмем первые 100 наблюдений:
 
 ```{r}
 #Графики для длинного окна усреднения:
 plot(Quotes_ORCL[1:100,2], type="l", lwd=2, col="black", xlab="Наблюдения", ylab="Цена закрытия", main="Акции компании ORACLE", ylim=c(10,16) )
-par(op)
 lines(Quotes_ORCL[1:100,8], type="l", lwd=2, col="red", xlab="Наблюдения", ylab="Цена закрытия", main="Акции компании ORACLE" )
 lines(Quotes_ORCL[1:100,10], type="l", lwd=2, col="orange", xlab="Наблюдения", ylab="Цена закрытия", main="Акции компании ORACLE" )
 lines(Quotes_ORCL[1:100,12], type="l", lwd=2, col="blue", xlab="Наблюдения", ylab="Цена закрытия", main="Акции компании ORACLE" )
 legend("topleft", c("SMA-L", "EMA-L", "WMA-L"), col=c("red", "orange", "blue"), lwd=4)
+```
+
+
+Для своего анализа я выбрала EMA-S и EMA-L, так как они более чувствительны к недавним значения. На графике розовый фон имеют интервалы времени, в течение которых значения "медленной" скользящей средней (EMA-L) превышают значения "быстрой" скользящей средней (EMA-S). Зеленый фон имеет обратная ситуация.
+
+```{r}
+drawSquares <- function(data, start){
+  #Графики для EMA-S и EMA-L:
+plot(Quotes_ORCL[10:2519,2], xaxt='n',type="l", lwd=2, col= rgb(0,0,0,alpha = 0.4), xlab="", ylab="Цена закрытия", main="Акции компании ORACLE", ylim=c(10,25) )
+lines(Quotes_ORCL[10:2519,9], type="l", lwd=2, col="red", xlab="Наблюдения", ylab="Цена закрытия", main="Акции компании ORACLE" )
+lines(Quotes_ORCL[10:2519,10], type="l", lwd=2, col="orange", xlab="Наблюдения", ylab="Цена закрытия", main="Акции компании ORACLE" )
+axis(side=1, at=vec,labels=Quotes_ORCL[vec,1], las=2,cex.axis = 0.6,srt = 60)
+
+
+  vec <- vector()
+  notFirst = FALSE;
+  init = FALSE;
+  ix = 50;
+  miny = 0;
+  maxy = 50;
+  if (data[start,1] > data[start,2]){
+    init = TRUE;
+  }
+  for (i in start:NROW(data)){
+    if (init == TRUE){
+      if (data[i,1]<data[i,2]){
+        init=FALSE;
+        vec <- c(vec,i)
+        if (notFirst)   rect(ix,miny,i,maxy, col=rgb(0.3,0.9,0.5,alpha=0.3));
+        if (!notFirst) notFirst = TRUE;
+        ix = i;
+      }
+    }else{
+      if (data[i,1]>data[i,2]){
+        init=TRUE;
+        vec <- c(vec,i)
+        if (notFirst) rect(ix,miny,i,maxy, col=rgb(0.6,0.2,0.7,alpha=0.3));
+        if (!notFirst) notFirst = TRUE;
+        ix = i;
+      }
+    }
+  }
+  return(vec)
+}
+
+vec <- drawSquares(Quotes_ORCL[,9:10], 50)
+legend("topleft", c("EMA-S", "EMA-L"), col=c("red", "orange"), lwd=2)
 
 ```
 
 
+Простейшая торговая стратегия будет состоять в следующем:
+- Актив мы покупаем на все имеющиеся в момент покупки средства 
+- Сделки совершаются только на собственные средства (отсутствует плечо)
+- Открываем длинные позиции (быки)
+- Сделка совершается по цене закрытия в момент времени, соответствующий получению сигнала
+- Нет комиссий биржи
+- Сигнал на покупку: когда быстрая (EMA-S) обгоняет медленную (EMA-L) - розовая область графика переходит в зеленую
+- Сигнал на продажу: когда медленная (EMA-L) обгоняет быструю (EMA-S) - зеленая область графика переходит в розовую
 
+
+```{r, include=FALSE}
+#imitation game
+Quotes_ORCL$budget <- Quotes_ORCL[NROW(Quotes_ORCL),2]*500
+Quotes_ORCL$papers <- 0
+initx <- 50
+intersections <- drawSquares(Quotes_ORCL[,9:10], initx)
+shallBuy <- FALSE
+if (Quotes_ORCL[initx,9] < Quotes_ORCL[initx,10]) shallBuy <-TRUE
+for (i in 1:NROW(intersections))
+  {
+  if (shallBuy){
+    index <- intersections[i]
+    price <- Quotes_ORCL[index,2]
+    budget <-  Quotes_ORCL[index,13]
+    papers <-  budget  %/% price
+    budget <- budget %% price
+    Quotes_ORCL[(index:(NROW(Quotes_ORCL))),14]<-papers
+    Quotes_ORCL[(index:(NROW(Quotes_ORCL))),13]<-budget
+    shallBuy <- FALSE;
+  }else{
+    if (!shallBuy){
+      index <- intersections[i]
+      price <- Quotes_ORCL[index,2]
+      budget <-  Quotes_ORCL[index,13] + price * Quotes_ORCL[index,14]
+      papers <-  0
+      Quotes_ORCL[(index:NROW(Quotes_ORCL)),14]<-papers
+      Quotes_ORCL[(index:NROW(Quotes_ORCL)),13]<-budget
+      shallBuy <- TRUE;
+    }
+  }
+}
+```
