--- a/trading/trading_oracle_nasdaq.Rmd
+++ b/trading/trading_oracle_nasdaq.Rmd
@@ -312,8 +312,11 @@ for (i in 1:NROW(intersections))
 ```
 
 
-В результате  работы механизма у нас осталось `r Quotes_ORCL[nrow(Quotes_ORCL), 13]` долларов и  `r Quotes_ORCL[nrow(Quotes_ORCL), 2]*Quotes_ORCL[nrow(Quotes_ORCL), 14]` акций на конец периода. Иначе говоря, наша прибыль оставила `r max(Quotes_ORCL[nrow(Quotes_ORCL), 13], Quotes_ORCL[nrow(Quotes_ORCL), 2]*Quotes_ORCL[nrow(Quotes_ORCL), 14]) - Quotes_ORCL[1, 2]*500` долларов.
+В результате  работы механизма у нас осталось `r Quotes_ORCL[nrow(Quotes_ORCL), 13]` долларов и  `r Quotes_ORCL[nrow(Quotes_ORCL), 2]*Quotes_ORCL[nrow(Quotes_ORCL), 14]` акций на конец периода. Иначе говоря, наша прибыль оставила `r max(Quotes_ORCL[nrow(Quotes_ORCL), 13], Quotes_ORCL[nrow(Quotes_ORCL), 2]*Quotes_ORCL[nrow(Quotes_ORCL), 14]) - Quotes_ORCL[1, 2]*500` доллара.
 
+
+
+Попробуем добиться лучшего финансового результата, варьируя длительность окна усреднения. Пусть короткое окно усреднения будет от 5 до 10 счетов, а большое от 20 до 50 счетов. Определим лучшие варианты развития событий:
 
 
 
