just not working yet

--- a/trading/trading_oracle_nasdaq.Rmd
+++ b/trading/trading_oracle_nasdaq.Rmd
@@ -434,3 +434,12 @@ legend("topleft", c("EMA-S", "EMA-L"), col=c("red", "orange"), lwd=2)
 img <- readPNG('sort.png')
 grid.raster(img)
 ```
+
+
+Используем самую выгодную стратегию: комбинацию SMA-S с окном усреднения 10 и SMA-L с окном усреднения 29. Добавим ряд условий (также продолжаем торговать на всю сумму, хотя это и не самое лучшее решение):
+
+- Допускается возможность севершения сделки "с плечом" (1:2), то есть у нас будет в 2 раза больше средств на совершение каждой сделки
+- Допускается возможность совершения "коротких" сделок (продаж без покрытия) на заумные акции в том же количестве также 1:2
+
+- Пусть комиссия за пользование кредитом составляет 0,08% за сделку 
+
