adding coursera_project

--- a/trading/trading_oracle_nasdaq.Rmd
+++ b/trading/trading_oracle_nasdaq.Rmd
@@ -1,13 +1,13 @@
 ---
-author: "Р›СЏРїРёРЅР° Р•РєР°С‚РµСЂРёРЅР°"
+author: "Ляпина Екатерина"
 date: "Monday, March 30, 2015"
 ---
 
-**Р’С‹РїРѕР»РЅРёР»Р°:**
-Р›СЏРїРёРЅР° Р•РєР°С‚РµСЂРёРЅР°
+**Выполнила:**
+Ляпина Екатерина
 
-Р”Р»СЏ СЃРѕР·РґР°РЅРёСЏ СЃРѕР±СЃС‚РІРµРЅРЅРѕР№ С‚РѕСЂРіРѕРІРѕР№ СЃС‚СЂР°С‚РµРіРёРё, РјРЅРѕСЋ Р±С‹Р»Рё РІС‹Р±СЂР°РЅС‹ Р°РєС†РёРё РєРѕРјРїР°РЅРёРё ORACLE СЃ Р±РёСЂР¶Рё РІС‹СЃРѕРєРѕС‚РµС…РЅРѕР»РѕРіРёС‡РµСЃРєРёС… РєРѕРјРїР°РЅРёР№ NASDAQ.
-Р”Р»СЏ Р°РЅР°Р»РёР·Р° Р±С‹Р»Рё РІР·СЏС‚С‹ СЃР»РµРґСѓСЋС‰РёРµ РґР°РЅРЅС‹Рµ. С‚Р°Р№РјС„СЂРµР№Рј - 10 Р»РµС‚: 
+Для создания собственной торговой стратегии, мною были выбраны акции компании ORACLE с биржи высокотехнологических компаний NASDAQ.
+Для анализа были взяты следующие данные. таймфрейм - 10 лет: 
 http://www.nasdaq.com/symbol/orcl/historical
 
 ```{r, fig.align='center', echo=FALSE}
@@ -28,12 +28,12 @@ library("TTR")
 library("png")
 #install.packages("checkpoint", dependencies=TRUE)
 #library("checkpoint")
-#checkpoint ("2015-04-05", R.version = "3.1.2", checkpointLocation = "C:/Users/Р•РєР°С‚РµСЂРёРЅР°/Documents/GitHub/R/trading")
+#checkpoint ("2015-04-05", R.version = "3.1.2", checkpointLocation = "C:/Users/Екатерина/Documents/GitHub/R/trading")
 
-#РЎС‡РёС‚С‹РІР°РµРј РґР°РЅРЅС‹Рµ РёР· С„Р°Р№Р»Р°, РїСЂРёРІРµРґРµРј РёС… Рє РІРёРґСѓ, РїСЂРёРіРѕРґРЅРѕРјСѓ РґР»СЏ Р°РЅР°Р»РёР·Р° РІ R:
+#Считываем данные из файла, приведем их к виду, пригодному для анализа в R:
 Quotes1 <- read.csv(file="HistoricalQuotes.csv",stringsAsFactors = FALSE, header=TRUE, sep=",", dec= ".")
 for (i in 2:6) Quotes1[,i]  <- as.numeric(as.character(Quotes1[,i]))
-#РРЅРІРµСЂС‚РёСЂСѓРµРј Р·РЅР°С‡РµРЅРёСЏ:
+#Инвертируем значения:
 Quotes <- subset(Quotes1, select = c("date", "close", "volume",  "open", "high",  "low")); 
 
 for (i in 1:nrow(Quotes1)) Quotes[i,]  <- Quotes1[nrow(Quotes1) - i + 1,]
@@ -45,75 +45,75 @@ rm(Quotes1)
 #opts_chunk$set(echo=FALSE, message=FALSE, fig.align = "center")
 ```
 
-**РћР±СЉРµРєС‚РѕРј РёСЃСЃР»РµРґРѕРІР°РЅРёСЏ** СЏРІР»СЏРµС‚СЃСЏ С„РёРЅР°РЅСЃРѕРІРѕРµ СЃРѕСЃС‚РѕСЏРЅРёРµ РєРѕСЂРїРѕСЂР°С†РёРё ORACLE, РІС‹СЂР°Р¶РµРЅРЅРѕРµ РІ Р±РёСЂР¶РµРІС‹С… РєРѕС‚РёСЂРѕРІРєР°С….
+**Объектом исследования** является финансовое состояние корпорации ORACLE, выраженное в биржевых котировках.
 
-**РџСЂРµРґРјРµС‚РѕРј РёСЃСЃР»РµРґРѕРІР°РЅРёСЏ** РІС‹СЃС‚СѓРїР°СЋС‚  СЌРєРѕРЅРѕРјРёС‡РµСЃРєРёРµ РїРѕРєР°Р·Р°С‚РµР»Рё, С„РѕСЂРјРёСЂСѓСЋС‰РёРµСЃСЏ РІ СЂРµР·СѓР»СЊС‚Р°С‚Рµ РґРµСЏС‚РµР»СЊРЅРѕСЃС‚Рё С„РёСЂРјС‹.
+**Предметом исследования** выступают  экономические показатели, формирующиеся в результате деятельности фирмы.
 
-**Р¦РµР»СЊ СЂР°Р±РѕС‚С‹:** 
+**Цель работы:** 
 
-РЈСЃС‚Р°РЅРѕРІР»РµРЅРёРµ СЃС‚СЂСѓРєС‚СѓСЂРЅС‹С… СЃРІСЏР·РµР№ Рё Р·Р°РєРѕРЅРѕРјРµСЂРЅРѕСЃС‚РµР№ РјРµР¶РґСѓ СЌР»РµРјРµРЅС‚Р°РјРё РёСЃСЃР»РµРґСѓРµРјРѕР№ СЃРёСЃС‚РµРјС‹ РІ РІС‹Р±СЂР°РЅРЅРѕР№ РїСЂРµРґРјРµС‚РЅРѕР№ РѕР±Р»Р°СЃС‚Рё. РџРѕСЃР»РµРґСѓСЋС‰Р°СЏ РёРЅС‚РµСЂРїСЂРµС‚Р°С†РёСЏ РёРјРµСЋС‰РёС…СЃСЏ РґР°РЅРЅС‹С…, Р°РЅР°Р»РёР· РїСЂРёРјРµРЅРёРјРѕСЃС‚Рё РїРѕР»СѓС‡РµРЅРЅС‹С… СЂРµР·СѓР»СЊС‚Р°С‚РѕРІ Рё СЃРѕР·РґР°РЅРёРµ РЅР°РёР»СѓС‡С€РµР№ РјРѕРґРµР»Рё РґР»СЏ РґР°Р»СЊРЅРµР№С€РµРіРѕ РїСЂРѕРіРЅРѕР·РёСЂРѕРІР°РЅРёСЏ РїРѕРґРѕР±РЅС‹С… РґР°РЅРЅС‹С…. Р’ РїСЂР°РєС‚РёС‡РµСЃРєРѕРј СЃРјС‹СЃР»Рµ, Р°РЅР°Р»РёС‚РёС‡РµСЃРєРёРµ РјРѕРґРµР»Рё РјРѕРіСѓС‚ СѓСЃРїРµС€РЅРѕ РёСЃРїРѕР»СЊР·РѕРІР°С‚СЊСЃСЏ РґР»СЏ СЂРµС€РµРЅРёСЏ Р·Р°РґР°С‡ РІС‹СЏРІР»РµРЅРёСЏ Р±Р°РЅРєСЂРѕС‚СЃС‚РІР° С„РёСЂРјС‹, Рё РїСЂРµРґСѓРїСЂРµР¶РґРµРЅРёСЏ РїРѕРґРѕР±РЅС‹С… СЃРёС‚СѓР°С†РёР№.
-
-
-**Р—Р°РґР°С‡Рё:**
-
-РџСЂРѕС…РѕР¶РґРµРЅРёРµ СЌС‚Р°РїРѕРІ РёР·РІР»РµС‡РµРЅРёСЏ, РѕС‡РёСЃС‚РєРё Рё С‚СЂР°РЅСЃС„РѕСЂРјР°С†РёРё СЃС‹СЂС‹С… РґР°РЅРЅС‹С….
-РђРЅР°Р»РёР· РІСЂРµРјРµРЅРЅС‹С… СЂСЏРґРѕРІ РІ С„РѕСЂРјРµ Р±РёСЂР¶РµРІС‹С… СЃРІРѕРґРѕРє. РџСЂРёРјРµРЅРµРЅРёРµ С‚РµС…РЅРёРє РґР»СЏ Р°РЅР°Р»РёР·Р° РІСЂРµРјРµРЅРЅС‹С… СЂСЏРґРѕРІ, Р°РЅР°Р»РёР· СЌС„С„РµРєС‚РёРІРЅРѕСЃС‚Рё СЃСѓС‰РµСЃС‚РІСѓСЋС‰РёС… С‚РѕСЂРіРѕРІС‹С… СЃС‚СЂР°С‚РµРіРёР№ Рё СЃРѕР·РґР°РЅРёРµ СЃРІРѕРµР№ СЃРѕР±СЃС‚РІРµРЅРЅРѕР№.
+Установление структурных связей и закономерностей между элементами исследуемой системы в выбранной предметной области. Последующая интерпретация имеющихся данных, анализ применимости полученных результатов и создание наилучшей модели для дальнейшего прогнозирования подобных данных. В практическом смысле, аналитические модели могут успешно использоваться для решения задач выявления банкротства фирмы, и предупреждения подобных ситуаций.
 
 
-#РћРїРёСЃР°РЅРёРµ РґР°РЅРЅС‹С…:
+**Задачи:**
 
-Р’ РЅР°С€РµРј РЅР°Р±РѕСЂРµ РґР°РЅРЅС‹С… `r nrow(Quotes)` РЅР°Р±Р»СЋРґРµРЅРёР№ Рё 6 РїРµСЂРµРјРµРЅРЅС‹С…. РСЃС…РѕРґРЅС‹Р№ С„Р°Р№Р» СЃ РґР°РЅРЅС‹РјРё РІ С„РѕСЂРјР°С‚Рµ csv.
+Прохождение этапов извлечения, очистки и трансформации сырых данных.
+Анализ временных рядов в форме биржевых сводок. Применение техник для анализа временных рядов, анализ эффективности существующих торговых стратегий и создание своей собственной.
 
 
-###РћРїРёСЃР°РЅРёРµ РёСЃС…РѕРґРЅС‹С… РїРµСЂРµРјРµРЅРЅС‹С…:
+#Описание данных:
 
-- **date**: РґР°С‚Р° РєРѕС‚РёСЂРѕРІРєРё, РёРЅС‚РµСЂРІР°Р» Р·Р°РїРёСЃРµР№ - РґРµРЅСЊ, РїРµСЂРёРѕРґ - 10 Р»РµС‚.
-- **close** : С†РµРЅР° РЅР° РјРѕРјРµРЅС‚ Р·Р°РєСЂС‹С‚РёСЏ С‚РѕСЂРіРѕРІ.
-- **volume** : РєРѕР»РёС‡РµСЃС‚РІРѕ Р°РєС†РёР№, РєРѕС‚РѕСЂС‹Рµ РѕР±СЂР°С‰Р°Р»РёСЃСЊ РЅР° Р±РёСЂР¶Рµ РІ РґРµРЅСЊ Р·Р°РїРёСЃРё, РѕСЊСЉРµРј С‚РѕСЂРіРѕРІ.
-- **open** : С†РµРЅР° РЅР° РјРѕРјРµРЅС‚ РѕС‚РєСЂС‹С‚РёСЏ С‚РѕСЂРіРѕРІ.
-- **hight** : СЃР°РјР°СЏ РІС‹СЃРѕРєР°СЏ С†РµРЅС‹ Р·Р° Р°РєС†РёСЋ Р·Р° РґРµРЅСЊ.
-- **low** : СЃР°РјР°СЏ РЅРёР·РєР°СЏ С†РµРЅС‹ Р·Р° Р°РєС†РёСЋ Р·Р° РґРµРЅСЊ.
+В нашем наборе данных `r nrow(Quotes)` наблюдений и 6 переменных. Исходный файл с данными в формате csv.
 
-РћРїРёСЃР°С‚РµР»СЊРЅР°СЏ СЃС‚Р°С‚РёСЃС‚РёРєР° РїРѕ РЅР°С€РµР№ РІС‹Р±РѕРєРµ:
+
+###Описание исходных переменных:
+
+- **date**: дата котировки, интервал записей - день, период - 10 лет.
+- **close** : цена на момент закрытия торгов.
+- **volume** : количество акций, которые обращались на бирже в день записи, оьъем торгов.
+- **open** : цена на момент открытия торгов.
+- **hight** : самая высокая цены за акцию за день.
+- **low** : самая низкая цены за акцию за день.
+
+Описательная статистика по нашей выбоке:
 ```{r, results='asis', echo=FALSE}
 knitr::kable(summary(Quotes))
 ```
 
-Р›РёРЅРµР№РЅС‹Р№ РіСЂР°С„РёРє Р·Р°РІРёСЃРёРјРѕСЃС‚Рё С†РµРЅС‹ Р·Р°РєСЂС‹С‚РёСЏ РґР»СЏ 300 РЅР°Р±Р»СЋРґРµРЅРёР№ (РїРµСЂРёРѕРґ СЃ 2005-03-28 РїРѕ 2006-06-02):
+Линейный график зависимости цены закрытия для 300 наблюдений (период с 2005-03-28 по 2006-06-02):
 
 ```{r, echo=FALSE, fig.align='center'}
-plot(Quotes[1:300,2], type="l", lwd=2, col="red", xlab="РќР°Р±Р»СЋРґРµРЅРёСЏ", ylab="Р¦РµРЅР° Р·Р°РєСЂС‹С‚РёСЏ", main="РђРєС†РёРё РєРѕРјРїР°РЅРёРё ORACLE", ylim=c(10,16) )
+plot(Quotes[1:300,2], type="l", lwd=2, col="red", xlab="Наблюдения", ylab="Цена закрытия", main="Акции компании ORACLE", ylim=c(10,16) )
 ```
 
 ```{r, include=FALSE, echo=FALSE, fig.align='center'}
-#РџРµСЂРµРІРµРґРµРј РІ СѓРґРѕР±РѕРІР°СЂРёРјС‹Р№ РІРёРґ РґР»СЏ РЅР°С€РёС… РїР°РєРµС‚РѕРІ
+#Переведем в удобоваримый вид для наших пакетов
 ORCL <- xts(Quotes[, 2:6], order.by=as.POSIXct(Quotes[,1]))
 ORCL <- ORCL[ ! duplicated( index(ORCL) ),]
 ```
 
 
-Р›РёРЅРµР№РЅС‹Р№ РіСЂР°С„РёРє Р·Р°РІРёСЃРёРјРѕСЃС‚Рё РѕР±СЉРµРјР° С‚РѕСЂРіРѕРІ РґР»СЏ 300 РЅР°Р±Р»СЋРґРµРЅРёР№ (РїРµСЂРёРѕРґ СЃ 2005-03-28 РїРѕ 2006-06-02):
+Линейный график зависимости объема торгов для 300 наблюдений (период с 2005-03-28 по 2006-06-02):
 
 ```{r, echo=FALSE, fig.align='center'}
-plot(Quotes[1:300,3], type="l", lwd=2, col="blue", xlab="РќР°Р±Р»СЋРґРµРЅРёСЏ", ylab="РћР±СЉРµРј С‚РѕСЂРіРѕРІ", main="РђРєС†РёРё РєРѕРјРїР°РЅРёРё ORACLE", ylim=c(0,203555500) )
+plot(Quotes[1:300,3], type="l", lwd=2, col="blue", xlab="Наблюдения", ylab="Объем торгов", main="Акции компании ORACLE", ylim=c(0,203555500) )
 ```
 
 
-Р“СЂР°С„РёРє С†РµРЅС‹ РІ С„РѕСЂРјРµ СЏРїРѕРЅСЃРєРёС… СЃРІРµС‡РµР№ (РіРґРµ Р·РµР»РµРЅС‹Рј С†РІРµС‚РѕРј РѕС‚РѕР±СЂР°Р¶РµРЅРѕ, РєРѕРіРґР° С†РµРЅР° Р·Р°РєСЂС‹С‚РёСЏ РІС‹С€Рµ С†РµРЅС‹ РѕС‚РєСЂС‹С‚РёСЏ, РєСЂР°СЃРЅС‹Рј - РЅР°РѕР±РѕСЂРѕС‚):
+График цены в форме японских свечей (где зеленым цветом отображено, когда цена закрытия выше цены открытия, красным - наоборот):
 
 ```{r, echo=FALSE, fig.align='center'}
 chartSeries(ORCL,subset='2005-03-28::2005-10-26')
 ```
 
 
-РЎС‚РѕР»Р±РёРєРѕРІС‹Р№ РіСЂР°С„РёРє:
+Столбиковый график:
 
 ```{r, echo=FALSE, fig.align='center'}
 barChart(ORCL,subset='2005-03-28::2005-10-26', theme='white.mono',bar.type='hlc')
 ```
 
 
-РЎРєРѕР»СЊР·СЏС‰РµРµ СЃСЂРµРґРЅРµРµ РЅР° РѕСЃРЅРѕРІР°РЅРёРё С†РµРЅС‹ Р·Р°РєСЂС‹С‚РёСЏ, РѕРєРЅРѕ СѓСЃСЂРµРґРЅРµРЅРёСЏ - 10 РѕС‚СЃС‡РµС‚РѕРІ:
+Скользящее среднее на основании цены закрытия, окно усреднения - 10 отсчетов:
 
 ```{r, echo=FALSE, fig.align='center'}
 chartSeries(ORCL, subset='2005-03-28::2005-10-26',TA="addSMA(10)")
@@ -121,38 +121,38 @@ chartSeries(ORCL, subset='2005-03-28::2005-10-26',TA="addSMA(10)")
 
 
 
-РЎРєРѕР»СЊР·СЏС‰РµРµ СЃСЂРµРґРЅРµРµ РЅР° РѕСЃРЅРѕРІР°РЅРёРё С†РµРЅС‹ Р·Р°РєСЂС‹С‚РёСЏ, РѕРєРЅРѕ СѓСЃСЂРµРґРЅРµРЅРёСЏ - 50 РѕС‚СЃС‡РµС‚РѕРІ:
+Скользящее среднее на основании цены закрытия, окно усреднения - 50 отсчетов:
 
 ```{r, echo=FALSE, fig.align='center'}
 chartSeries(ORCL, subset='2005-03-28::2005-10-26',TA="addSMA(50)")
 ```
 
 
-Р“СЂР°С„РёРє СЃРѕРїРѕСЃС‚Р°РІР»РµРЅРёСЏ СЃРєРѕР»СЊР·СЏС‰РёС… СЃСЂРµРґРЅРёС… РјРµР¶РґСѓ СЃРѕР±РѕР№:
+График сопоставления скользящих средних между собой:
 
 ```{r, echo=FALSE, fig.align='center'}
-#Р“СЂР°С„РёРє СЃРѕРїРѕСЃС‚Р°РІР»РµРЅРёСЏ СЃРєРѕР»СЊР·СЏС‰РёС… СЃСЂРµРґРЅРёС… РјРµР¶РґСѓ СЃРѕР±РѕР№:
+#График сопоставления скользящих средних между собой:
 for (i in 10:nrow(Quotes)) Quotes[i,7] <- mean(Quotes[(i-9):i,2])
-plot(Quotes[1:300,2], type="l", lwd=2, col="red", xlab="РќР°Р±Р»СЋРґРµРЅРёСЏ", ylab="Р¦РµРЅР° Р·Р°РєСЂС‹С‚РёСЏ", main="РђРєС†РёРё РєРѕРјРїР°РЅРёРё ORACLE", ylim=c(10,16) )
-lines(Quotes[1:300,7], type="l", lwd=2, col="blue", xlab="РќР°Р±Р»СЋРґРµРЅРёСЏ", ylab="Р¦РµРЅР° Р·Р°РєСЂС‹С‚РёСЏ", main="РђРєС†РёРё РєРѕРјРїР°РЅРёРё ORACLE" )
+plot(Quotes[1:300,2], type="l", lwd=2, col="red", xlab="Наблюдения", ylab="Цена закрытия", main="Акции компании ORACLE", ylim=c(10,16) )
+lines(Quotes[1:300,7], type="l", lwd=2, col="blue", xlab="Наблюдения", ylab="Цена закрытия", main="Акции компании ORACLE" )
 colnames(Quotes)[7] <- "SMAS"
 for (i in 50:nrow(Quotes)) Quotes[i,8] <- mean(Quotes[(i-49):i,2])
-lines(Quotes[1:300,8], type="l", lwd=2, col="orange", xlab="РќР°Р±Р»СЋРґРµРЅРёСЏ", ylab="Р¦РµРЅР° Р·Р°РєСЂС‹С‚РёСЏ", main="РђРєС†РёРё РєРѕРјРїР°РЅРёРё ORACLE" )
+lines(Quotes[1:300,8], type="l", lwd=2, col="orange", xlab="Наблюдения", ylab="Цена закрытия", main="Акции компании ORACLE" )
 colnames(Quotes)[8] <- "SMAL"
 legend("topleft", c("SMA-S", "SMA-L"), col=c("blue", "orange"), lwd=4)
 ```
 
 
-Р“СЂР°С„РёРє СЃРѕРїРѕСЃС‚Р°РІР»РµРЅРёСЏ СЌРєСЃРїРѕРЅРµРЅС†РёР°Р»СЊРЅС‹С… СЃРєРѕР»СЊР·СЏС‰РёС… СЃСЂРµРґРЅРёС… РјРµР¶РґСѓ СЃРѕР±РѕР№:
+График сопоставления экспоненциальных скользящих средних между собой:
 
 ```{r, echo=FALSE, fig.align='center'}
-#Р“СЂР°С„РёРє СЃРѕРїРѕСЃС‚Р°РІР»РµРЅРёСЏ СЌРєСЃРїРѕРЅРµРЅС†РёР°Р»СЊРЅС‹С… СЃРєРѕР»СЊР·СЏС‰РёС… СЃСЂРµРґРЅРёС… РјРµР¶РґСѓ СЃРѕР±РѕР№:
+#График сопоставления экспоненциальных скользящих средних между собой:
 Quotes[,9] <- EMA(Quotes[,2], n=10, ratio = 1-((10-1)/(10+1)))
-plot(Quotes[1:300,2], type="l", lwd=2, col="red", xlab="РќР°Р±Р»СЋРґРµРЅРёСЏ", ylab="Р¦РµРЅР° Р·Р°РєСЂС‹С‚РёСЏ", main="РђРєС†РёРё РєРѕРјРїР°РЅРёРё ORACLE", ylim=c(10,16) )
-lines(Quotes[1:300,9], type="l", lwd=2, col="blue", xlab="РќР°Р±Р»СЋРґРµРЅРёСЏ", ylab="Р¦РµРЅР° Р·Р°РєСЂС‹С‚РёСЏ", main="РђРєС†РёРё РєРѕРјРїР°РЅРёРё ORACLE" )
+plot(Quotes[1:300,2], type="l", lwd=2, col="red", xlab="Наблюдения", ylab="Цена закрытия", main="Акции компании ORACLE", ylim=c(10,16) )
+lines(Quotes[1:300,9], type="l", lwd=2, col="blue", xlab="Наблюдения", ylab="Цена закрытия", main="Акции компании ORACLE" )
 colnames(Quotes)[9] <- "EMAS"
 Quotes[,10] <- EMA(Quotes[,2], n=50, ratio = 1 - ((50-1)/(50+1)))
-lines(Quotes[1:300,10], type="l", lwd=2, col="orange", xlab="РќР°Р±Р»СЋРґРµРЅРёСЏ", ylab="Р¦РµРЅР° Р·Р°РєСЂС‹С‚РёСЏ", main="РђРєС†РёРё РєРѕРјРїР°РЅРёРё ORACLE" )
+lines(Quotes[1:300,10], type="l", lwd=2, col="orange", xlab="Наблюдения", ylab="Цена закрытия", main="Акции компании ORACLE" )
 colnames(Quotes)[10] <- "EMAL"
 legend("topleft", c("EMA-S", "EMA-L"), col=c("blue", "orange"), lwd=4)
 ```
@@ -184,54 +184,54 @@ Quotes[,12] <- WMA(50, Quotes[, 2])
 ```
 
 
-Р“СЂР°С„РёРє СЃРѕРїРѕСЃС‚Р°РІР»РµРЅРёСЏ РѕРєРѕРЅ СѓСЃСЂРµРґРЅРµРЅРёСЏ:
+График сопоставления окон усреднения:
 
 ```{r, echo=FALSE, fig.align='center'}
-#Р“СЂР°С„РёРє СЃРѕРїРѕСЃС‚Р°РІР»РµРЅРёСЏ СЂР°Р·Р»РёС‡РЅС‹С… РѕРєРѕРЅ РјРµР¶РґСѓ СЃРѕР±РѕР№:
-plot(Quotes[1:300,2], type="l", lwd=2, col="red", xlab="РќР°Р±Р»СЋРґРµРЅРёСЏ", ylab="Р¦РµРЅР° Р·Р°РєСЂС‹С‚РёСЏ", main="РђРєС†РёРё РєРѕРјРїР°РЅРёРё ORACLE", ylim=c(10,16) )
-lines(Quotes[1:300,11], type="l", lwd=2, col="blue", xlab="РќР°Р±Р»СЋРґРµРЅРёСЏ", ylab="Р¦РµРЅР° Р·Р°РєСЂС‹С‚РёСЏ", main="РђРєС†РёРё РєРѕРјРїР°РЅРёРё ORACLE" )
+#График сопоставления различных окон между собой:
+plot(Quotes[1:300,2], type="l", lwd=2, col="red", xlab="Наблюдения", ylab="Цена закрытия", main="Акции компании ORACLE", ylim=c(10,16) )
+lines(Quotes[1:300,11], type="l", lwd=2, col="blue", xlab="Наблюдения", ylab="Цена закрытия", main="Акции компании ORACLE" )
 colnames(Quotes)[11] <- "WMAS"
-lines(Quotes[1:300,12], type="l", lwd=2, col="orange", xlab="РќР°Р±Р»СЋРґРµРЅРёСЏ", ylab="Р¦РµРЅР° Р·Р°РєСЂС‹С‚РёСЏ", main="РђРєС†РёРё РєРѕРјРїР°РЅРёРё ORACLE" )
+lines(Quotes[1:300,12], type="l", lwd=2, col="orange", xlab="Наблюдения", ylab="Цена закрытия", main="Акции компании ORACLE" )
 colnames(Quotes)[12] <- "WMAL"
 legend("topleft", c("WMA-S", "WMA-L"), col=c("blue", "orange"), lwd=4)
 ```
 
 
 
-Р“СЂР°С„РёРєРё РґР»СЏ СЃРѕРїРѕСЃС‚Р°РІР»РµРЅРёСЏ РєРѕСЂРѕС‚РєРѕРіРѕ РѕРєРЅР° СѓСЃСЂРµРґРЅРµРЅРёСЏ, РґР»СЏ РЅР°РіР»СЏРґРЅРѕСЃС‚Рё РјС‹ РІРѕР·СЊРјРµРј РїРµСЂРІС‹Рµ 100 РЅР°Р±Р»СЋРґРµРЅРёР№:
+Графики для сопоставления короткого окна усреднения, для наглядности мы возьмем первые 100 наблюдений:
 
 ```{r, echo=FALSE, fig.align='center'}
-#Р“СЂР°С„РёРєРё РґР»СЏ РєРѕСЂРѕС‚РєРѕРіРѕ РѕРєРЅР° СѓСЃСЂРµРґРЅРµРЅРёСЏ:
-plot(Quotes[1:100,2], type="l", lwd=2, col="black", xlab="РќР°Р±Р»СЋРґРµРЅРёСЏ", ylab="Р¦РµРЅР° Р·Р°РєСЂС‹С‚РёСЏ", main="РђРєС†РёРё РєРѕРјРїР°РЅРёРё ORACLE", ylim=c(10,16) )
-lines(Quotes[1:100,7], type="l", lwd=2, col="red", xlab="РќР°Р±Р»СЋРґРµРЅРёСЏ", ylab="Р¦РµРЅР° Р·Р°РєСЂС‹С‚РёСЏ", main="РђРєС†РёРё РєРѕРјРїР°РЅРёРё ORACLE" )
-lines(Quotes[1:100,9], type="l", lwd=2, col="orange", xlab="РќР°Р±Р»СЋРґРµРЅРёСЏ", ylab="Р¦РµРЅР° Р·Р°РєСЂС‹С‚РёСЏ", main="РђРєС†РёРё РєРѕРјРїР°РЅРёРё ORACLE" )
-lines(Quotes[1:100,11], type="l", lwd=2, col="blue", xlab="РќР°Р±Р»СЋРґРµРЅРёСЏ", ylab="Р¦РµРЅР° Р·Р°РєСЂС‹С‚РёСЏ", main="РђРєС†РёРё РєРѕРјРїР°РЅРёРё ORACLE" )
+#Графики для короткого окна усреднения:
+plot(Quotes[1:100,2], type="l", lwd=2, col="black", xlab="Наблюдения", ylab="Цена закрытия", main="Акции компании ORACLE", ylim=c(10,16) )
+lines(Quotes[1:100,7], type="l", lwd=2, col="red", xlab="Наблюдения", ylab="Цена закрытия", main="Акции компании ORACLE" )
+lines(Quotes[1:100,9], type="l", lwd=2, col="orange", xlab="Наблюдения", ylab="Цена закрытия", main="Акции компании ORACLE" )
+lines(Quotes[1:100,11], type="l", lwd=2, col="blue", xlab="Наблюдения", ylab="Цена закрытия", main="Акции компании ORACLE" )
 legend("topleft", c("SMA-S", "EMA-S", "WMA-S"), col=c("red", "orange", "blue"), lwd=4)
 ```
 
-Р“СЂР°С„РёРєРё РґР»СЏ РґР»РёРЅРЅРѕРіРѕ РѕРєРЅР° СѓСЃСЂРµРґРЅРµРЅРёСЏ, РґР»СЏ РЅР°РіР»СЏРґРЅРѕСЃС‚Рё РјС‹ РІРѕР·СЊРјРµРј РїРµСЂРІС‹Рµ 100 РЅР°Р±Р»СЋРґРµРЅРёР№:
+Графики для длинного окна усреднения, для наглядности мы возьмем первые 100 наблюдений:
 
 ```{r, echo=FALSE, fig.align='center'}
-#Р“СЂР°С„РёРєРё РґР»СЏ РґР»РёРЅРЅРѕРіРѕ РѕРєРЅР° СѓСЃСЂРµРґРЅРµРЅРёСЏ:
-plot(Quotes[1:100,2], type="l", lwd=2, col="black", xlab="РќР°Р±Р»СЋРґРµРЅРёСЏ", ylab="Р¦РµРЅР° Р·Р°РєСЂС‹С‚РёСЏ", main="РђРєС†РёРё РєРѕРјРїР°РЅРёРё ORACLE", ylim=c(10,16) )
-lines(Quotes[1:100,8], type="l", lwd=2, col="red", xlab="РќР°Р±Р»СЋРґРµРЅРёСЏ", ylab="Р¦РµРЅР° Р·Р°РєСЂС‹С‚РёСЏ", main="РђРєС†РёРё РєРѕРјРїР°РЅРёРё ORACLE" )
-lines(Quotes[1:100,10], type="l", lwd=2, col="orange", xlab="РќР°Р±Р»СЋРґРµРЅРёСЏ", ylab="Р¦РµРЅР° Р·Р°РєСЂС‹С‚РёСЏ", main="РђРєС†РёРё РєРѕРјРїР°РЅРёРё ORACLE" )
-lines(Quotes[1:100,12], type="l", lwd=2, col="blue", xlab="РќР°Р±Р»СЋРґРµРЅРёСЏ", ylab="Р¦РµРЅР° Р·Р°РєСЂС‹С‚РёСЏ", main="РђРєС†РёРё РєРѕРјРїР°РЅРёРё ORACLE" )
+#Графики для длинного окна усреднения:
+plot(Quotes[1:100,2], type="l", lwd=2, col="black", xlab="Наблюдения", ylab="Цена закрытия", main="Акции компании ORACLE", ylim=c(10,16) )
+lines(Quotes[1:100,8], type="l", lwd=2, col="red", xlab="Наблюдения", ylab="Цена закрытия", main="Акции компании ORACLE" )
+lines(Quotes[1:100,10], type="l", lwd=2, col="orange", xlab="Наблюдения", ylab="Цена закрытия", main="Акции компании ORACLE" )
+lines(Quotes[1:100,12], type="l", lwd=2, col="blue", xlab="Наблюдения", ylab="Цена закрытия", main="Акции компании ORACLE" )
 legend("topleft", c("SMA-L", "EMA-L", "WMA-L"), col=c("red", "orange", "blue"), lwd=4)
 ```
 
 
-Р”Р»СЏ СЃРІРѕРµРіРѕ Р°РЅР°Р»РёР·Р° СЏ РІС‹Р±СЂР°Р»Р° EMA-S Рё EMA-L, С‚Р°Рє РєР°Рє РѕРЅРё Р±РѕР»РµРµ С‡СѓРІСЃС‚РІРёС‚РµР»СЊРЅС‹ Рє РЅРµРґР°РІРЅРёРј Р·РЅР°С‡РµРЅРёСЏ. РќР° РіСЂР°С„РёРєРµ СЂРѕР·РѕРІС‹Р№ С„РѕРЅ РёРјРµСЋС‚ РёРЅС‚РµСЂРІР°Р»С‹ РІСЂРµРјРµРЅРё, РІ С‚РµС‡РµРЅРёРµ РєРѕС‚РѕСЂС‹С… Р·РЅР°С‡РµРЅРёСЏ "РјРµРґР»РµРЅРЅРѕР№" СЃРєРѕР»СЊР·СЏС‰РµР№ СЃСЂРµРґРЅРµР№ (EMA-L) РїСЂРµРІС‹С€Р°СЋС‚ Р·РЅР°С‡РµРЅРёСЏ "Р±С‹СЃС‚СЂРѕР№" СЃРєРѕР»СЊР·СЏС‰РµР№ СЃСЂРµРґРЅРµР№ (EMA-S). Р—РµР»РµРЅС‹Р№ С„РѕРЅ РёРјРµРµС‚ РѕР±СЂР°С‚РЅР°СЏ СЃРёС‚СѓР°С†РёСЏ.
+Для своего анализа я выбрала EMA-S и EMA-L, так как они более чувствительны к недавним значения. На графике розовый фон имеют интервалы времени, в течение которых значения "медленной" скользящей средней (EMA-L) превышают значения "быстрой" скользящей средней (EMA-S). Зеленый фон имеет обратная ситуация.
 
 ```{r, echo=FALSE, fig.align='center'}
-#Р“СЂР°С„РёРєРё РґР»СЏ EMA-S Рё EMA-L:
+#Графики для EMA-S и EMA-L:
 
 
 drawSquares <- function(data, start, plot=FALSE){
   if(plot){
-    plot(Quotes[,2], xaxt='n',type="l", lwd=2, col= rgb(0,0,0,alpha = 0.4), xlab="", ylab="Р¦РµРЅР° Р·Р°РєСЂС‹С‚РёСЏ", main="РђРєС†РёРё РєРѕРјРїР°РЅРёРё ORACLE")
-lines(Quotes[,9], type="l", lwd=2, col="red", xlab="РќР°Р±Р»СЋРґРµРЅРёСЏ", ylab="Р¦РµРЅР° Р·Р°РєСЂС‹С‚РёСЏ", main="РђРєС†РёРё РєРѕРјРїР°РЅРёРё ORACLE" )
-lines(Quotes[,10], type="l", lwd=2, col="orange", xlab="РќР°Р±Р»СЋРґРµРЅРёСЏ", ylab="Р¦РµРЅР° Р·Р°РєСЂС‹С‚РёСЏ", main="РђРєС†РёРё РєРѕРјРїР°РЅРёРё ORACLE" )   
+    plot(Quotes[,2], xaxt='n',type="l", lwd=2, col= rgb(0,0,0,alpha = 0.4), xlab="", ylab="Цена закрытия", main="Акции компании ORACLE")
+lines(Quotes[,9], type="l", lwd=2, col="red", xlab="Наблюдения", ylab="Цена закрытия", main="Акции компании ORACLE" )
+lines(Quotes[,10], type="l", lwd=2, col="orange", xlab="Наблюдения", ylab="Цена закрытия", main="Акции компании ORACLE" )   
     
   }
   vec <- vector()
@@ -272,16 +272,16 @@ legend("topleft", c("EMA-S", "EMA-L"), col=c("red", "orange"), lwd=2)
 ```
 
 
-РџСЂРѕСЃС‚РµР№С€Р°СЏ С‚РѕСЂРіРѕРІР°СЏ СЃС‚СЂР°С‚РµРіРёСЏ Р±СѓРґРµС‚ СЃРѕСЃС‚РѕСЏС‚СЊ РІ СЃР»РµРґСѓСЋС‰РµРј:
+Простейшая торговая стратегия будет состоять в следующем:
 
-- РђРєС‚РёРІ РјС‹ РїРѕРєСѓРїР°РµРј РЅР° РІСЃРµ РёРјРµСЋС‰РёРµСЃСЏ РІ РјРѕРјРµРЅС‚ РїРѕРєСѓРїРєРё СЃСЂРµРґСЃС‚РІР° 
-- РЎРґРµР»РєРё СЃРѕРІРµСЂС€Р°СЋС‚СЃСЏ С‚РѕР»СЊРєРѕ РЅР° СЃРѕР±СЃС‚РІРµРЅРЅС‹Рµ СЃСЂРµРґСЃС‚РІР° (РѕС‚СЃСѓС‚СЃС‚РІСѓРµС‚ РїР»РµС‡Рѕ)
-- РћС‚РєСЂС‹РІР°РµРј РґР»РёРЅРЅС‹Рµ РїРѕР·РёС†РёРё (Р±С‹РєРё)
-- РЎРґРµР»РєР° СЃРѕРІРµСЂС€Р°РµС‚СЃСЏ РїРѕ С†РµРЅРµ Р·Р°РєСЂС‹С‚РёСЏ РІ РјРѕРјРµРЅС‚ РІСЂРµРјРµРЅРё, СЃРѕРѕС‚РІРµС‚СЃС‚РІСѓСЋС‰РёР№ РїРѕР»СѓС‡РµРЅРёСЋ СЃРёРіРЅР°Р»Р°
-- РќРµС‚ РєРѕРјРёСЃСЃРёР№ Р±РёСЂР¶Рё
-- РЎРёРіРЅР°Р» РЅР° РїРѕРєСѓРїРєСѓ: РєРѕРіРґР° Р±С‹СЃС‚СЂР°СЏ (EMA-S) РѕР±РіРѕРЅСЏРµС‚ РјРµРґР»РµРЅРЅСѓСЋ (EMA-L) - СЂРѕР·РѕРІР°СЏ РѕР±Р»Р°СЃС‚СЊ РіСЂР°С„РёРєР° РїРµСЂРµС…РѕРґРёС‚ РІ Р·РµР»РµРЅСѓСЋ
-- РЎРёРіРЅР°Р» РЅР° РїСЂРѕРґР°Р¶Сѓ: РєРѕРіРґР° РјРµРґР»РµРЅРЅР°СЏ (EMA-L) РѕР±РіРѕРЅСЏРµС‚ Р±С‹СЃС‚СЂСѓСЋ (EMA-S) - Р·РµР»РµРЅР°СЏ РѕР±Р»Р°СЃС‚СЊ РіСЂР°С„РёРєР° РїРµСЂРµС…РѕРґРёС‚ РІ СЂРѕР·РѕРІСѓСЋ
-- РќР° РЅР°С‡Р°Р»Рѕ РїРµСЂРµРёРѕРґР° Сѓ РЅР°СЃ `r Quotes[1, 2]*500` РґРѕР»Р»Р°СЂРѕРІ
+- Актив мы покупаем на все имеющиеся в момент покупки средства 
+- Сделки совершаются только на собственные средства (отсутствует плечо)
+- Открываем длинные позиции (быки)
+- Сделка совершается по цене закрытия в момент времени, соответствующий получению сигнала
+- Нет комиссий биржи
+- Сигнал на покупку: когда быстрая (EMA-S) обгоняет медленную (EMA-L) - розовая область графика переходит в зеленую
+- Сигнал на продажу: когда медленная (EMA-L) обгоняет быструю (EMA-S) - зеленая область графика переходит в розовую
+- На начало переиода у нас `r Quotes[1, 2]*500` долларов
 
 ```{r, include=FALSE, echo=FALSE}
 #imitation game
@@ -319,15 +319,15 @@ legend("topleft", c("EMA-S", "EMA-L"), col=c("red", "orange"), lwd=2)
 ```
 
 
-Р’ СЂРµР·СѓР»СЊС‚Р°С‚Рµ  СЂР°Р±РѕС‚С‹ РјРµС…Р°РЅРёР·РјР° Сѓ РЅР°СЃ РѕСЃС‚Р°Р»РѕСЃСЊ `r Quotes[nrow(Quotes), 13]` РґРѕР»Р»Р°СЂРѕРІ Рё  `r Quotes[nrow(Quotes), 2]*Quotes[nrow(Quotes), 14]` Р°РєС†РёР№ РЅР° РєРѕРЅРµС† РїРµСЂРёРѕРґР°. РРЅР°С‡Рµ РіРѕРІРѕСЂСЏ, РЅР°С€Р° РїСЂРёР±С‹Р»СЊ РѕСЃС‚Р°РІРёР»Р° `r Quotes[nrow(Quotes), 13] + Quotes[nrow(Quotes), 2]*Quotes[nrow(Quotes), 14] - Quotes[nrow(Quotes), 2]*500` РґРѕР»Р»Р°СЂР°.
+В результате  работы механизма у нас осталось `r Quotes[nrow(Quotes), 13]` долларов и  `r Quotes[nrow(Quotes), 2]*Quotes[nrow(Quotes), 14]` акций на конец периода. Иначе говоря, наша прибыль оставила `r Quotes[nrow(Quotes), 13] + Quotes[nrow(Quotes), 2]*Quotes[nrow(Quotes), 14] - Quotes[nrow(Quotes), 2]*500` доллара.
 
 
 
-РџРѕРїСЂРѕР±СѓРµРј РґРѕР±РёС‚СЊСЃСЏ Р»СѓС‡С€РµРіРѕ С„РёРЅР°РЅСЃРѕРІРѕРіРѕ СЂРµР·СѓР»СЊС‚Р°С‚Р°, РІР°СЂСЊРёСЂСѓСЏ РґР»РёС‚РµР»СЊРЅРѕСЃС‚СЊ РѕРєРЅР° СѓСЃСЂРµРґРЅРµРЅРёСЏ. РџСѓСЃС‚СЊ РєРѕСЂРѕС‚РєРѕРµ РѕРєРЅРѕ СѓСЃСЂРµРґРЅРµРЅРёСЏ Р±СѓРґРµС‚ РѕС‚ 5 РґРѕ 10 СЃС‡РµС‚РѕРІ, Р° Р±РѕР»СЊС€РѕРµ РѕС‚ 20 РґРѕ 50 СЃС‡РµС‚РѕРІ. РћРїСЂРµРґРµР»РёРј Р»СѓС‡С€РёРµ РІР°СЂРёР°РЅС‚С‹ СЂР°Р·РІРёС‚РёСЏ СЃРѕР±С‹С‚РёР№ РґР»СЏ РІСЃРµРіРѕ РёРЅС‚РµСЂРІР°Р»Р° РІСЂРµРјРµРЅРё:
+Попробуем добиться лучшего финансового результата, варьируя длительность окна усреднения. Пусть короткое окно усреднения будет от 5 до 10 счетов, а большое от 20 до 50 счетов. Определим лучшие варианты развития событий для всего интервала времени:
 
 
 ```{r, include=FALSE, echo=FALSE}
-# #РџРѕРїСЂРѕР±СѓРµРј РґРѕР±РёС‚СЊСЃСЏ Р»СѓС‡С€РµРіРѕ С„РёРЅР°РЅСЃРѕРІРѕРіРѕ СЂРµР·СѓР»СЊС‚Р°С‚Р°, РІР°СЂСЊРёСЂСѓСЋ РґР»РёС‚РµР»СЊРЅРѕСЃС‚СЊ РѕРєРЅР° СѓСЃСЂРµРґРЅРµРЅРёСЏ:
+# #Попробуем добиться лучшего финансового результата, варьирую длительность окна усреднения:
 # 
 # 
 # Quotes_S <- subset(Quotes, select = c("date", "close", "volume",  "open", "high",  "low"))
@@ -336,7 +336,7 @@ legend("topleft", c("EMA-S", "EMA-L"), col=c("red", "orange"), lwd=2)
 # 
 # for (small in 5:10) {
 #   #SMA    
-#   a <- ncol(Quotes_S)+1 #РЅРѕРјРµСЂ РЅР°С€РµРіРѕ РёСЃРїС‹С‚Р°РЅРёСЏ
+#   a <- ncol(Quotes_S)+1 #номер нашего испытания
 #   for (i in small:nrow(Quotes_S)) Quotes_S[i,a] <- mean(Quotes_S[(i-(small - 1)):i,2])
 #   colnames(Quotes_S)[ncol(Quotes_S)] <- paste("SMAS", small, sep=" ")
 # 
@@ -353,7 +353,7 @@ legend("topleft", c("EMA-S", "EMA-L"), col=c("red", "orange"), lwd=2)
 # 
 # for (big in 20:50) {
 #   #SMA    
-#   a <- ncol(Quotes_L)+1 #РЅРѕРјРµСЂ РЅР°С€РµРіРѕ РёСЃРїС‹С‚Р°РЅРёСЏ
+#   a <- ncol(Quotes_L)+1 #номер нашего испытания
 #   for (i in big:nrow(Quotes_L)) Quotes_L[i,a] <- mean(Quotes_L[(i-(big - 1)):i,2])
 #   colnames(Quotes_L)[ncol(Quotes_L)] <- paste("SMAL", big, sep=" ")
 #   
@@ -380,7 +380,7 @@ legend("topleft", c("EMA-S", "EMA-L"), col=c("red", "orange"), lwd=2)
 # 
 # 
 # 
-# #РРіСЂР° РІ РёРјРёС‚Р°С†РёСЋ
+# #Игра в имитацию
 # for (small in 1:(ncol(Quotes_S))) {
 #   for (big in 1:(ncol(Quotes_L))) {
 #     Quotes_strategy$budget <- Quotes_strategy[NROW(Quotes_strategy),2]*500
@@ -436,10 +436,10 @@ grid.raster(img)
 ```
 
 
-РСЃРїРѕР»СЊР·СѓРµРј СЃР°РјСѓСЋ РІС‹РіРѕРґРЅСѓСЋ СЃС‚СЂР°С‚РµРіРёСЋ: РєРѕРјР±РёРЅР°С†РёСЋ SMA-S СЃ РѕРєРЅРѕРј СѓСЃСЂРµРґРЅРµРЅРёСЏ 10 Рё SMA-L СЃ РѕРєРЅРѕРј СѓСЃСЂРµРґРЅРµРЅРёСЏ 29. Р”РѕР±Р°РІРёРј СЂСЏРґ СѓСЃР»РѕРІРёР№ (С‚Р°РєР¶Рµ РїСЂРѕРґРѕР»Р¶Р°РµРј С‚РѕСЂРіРѕРІР°С‚СЊ РЅР° РІСЃСЋ СЃСѓРјРјСѓ, С…РѕС‚СЏ СЌС‚Рѕ Рё РЅРµ СЃР°РјРѕРµ Р»СѓС‡С€РµРµ СЂРµС€РµРЅРёРµ):
+Используем самую выгодную стратегию: комбинацию SMA-S с окном усреднения 10 и SMA-L с окном усреднения 29. Добавим ряд условий (также продолжаем торговать на всю сумму, хотя это и не самое лучшее решение):
 
-- Р”РѕРїСѓСЃРєР°РµС‚СЃСЏ РІРѕР·РјРѕР¶РЅРѕСЃС‚СЊ СЃРµРІРµСЂС€РµРЅРёСЏ СЃРґРµР»РєРё "СЃ РїР»РµС‡РѕРј" (1:2), С‚Рѕ РµСЃС‚СЊ Сѓ РЅР°СЃ Р±СѓРґРµС‚ РІ 2 СЂР°Р·Р° Р±РѕР»СЊС€Рµ СЃСЂРµРґСЃС‚РІ РЅР° СЃРѕРІРµСЂС€РµРЅРёРµ РєР°Р¶РґРѕР№ СЃРґРµР»РєРё
-- Р”РѕРїСѓСЃРєР°РµС‚СЃСЏ РІРѕР·РјРѕР¶РЅРѕСЃС‚СЊ СЃРѕРІРµСЂС€РµРЅРёСЏ "РєРѕСЂРѕС‚РєРёС…" СЃРґРµР»РѕРє (РїСЂРѕРґР°Р¶ Р±РµР· РїРѕРєСЂС‹С‚РёСЏ) РЅР° Р·Р°СѓРјРЅС‹Рµ Р°РєС†РёРё РІ С‚РѕРј Р¶Рµ РєРѕР»РёС‡РµСЃС‚РІРµ С‚Р°РєР¶Рµ 1:2
+- Допускается возможность севершения сделки "с плечом" (1:2), то есть у нас будет в 2 раза больше средств на совершение каждой сделки
+- Допускается возможность совершения "коротких" сделок (продаж без покрытия) на заумные акции в том же количестве также 1:2
 
-- РџСѓСЃС‚СЊ РєРѕРјРёСЃСЃРёСЏ Р·Р° РїРѕР»СЊР·РѕРІР°РЅРёРµ РєСЂРµРґРёС‚РѕРј СЃРѕСЃС‚Р°РІР»СЏРµС‚ 0,08% Р·Р° СЃРґРµР»РєСѓ 
+- Пусть комиссия за пользование кредитом составляет 0,08% за сделку 
 
